--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header class="header">
-        <nav data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="global.header-nav.partial.html"></nav>
-    </header>
-    <main class="main">
-        
-    </main>
-    <footer class="footer">
-        
-    </footer>
-</body>
+<!doctype html>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Котики</title>
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <script>
+      src="https://unpkg.com/htmx.org@1.9.10"
+      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
+      crossorigin="anonymous"
+    </script></head>
+ <body>
+    <h1>Котики</h1>
+    <h2>Cіре кошенятко</h2>
+    <img width="400" src="img/grey-cat.jpg" alt="кошенятко">
+    <h2>Руді котики</h2>
+    <img width="400" src="img/orange-cat.jpg" alt="Руді котики">
+  </body>
 </html>
