--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
     </script></head>
  <body>
-    <h1>Котики</h1>
-    <h2>Cіре кошенятко</h2>
-    <img width="400" src="img/grey-cat.jpg" alt="кошенятко">
-    <h2>Руді котики</h2>
-    <img width="400" src="img/orange-cat.jpg" alt="Руді котики">
+    <h1>Dogs</h1>
+    <h2>Spitz</h2>
+    <img width="400" src="img/Spitz.jpg" alt="Spitz">
+    <h2>Chihuahua</h2>
+    <img width="400" src="img/Chihuahua.jpg" alt="Chihuahua">
   </body>
 </html>
