--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Котики</title>
+    <title>Dogs</title>
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <script>
-      src="https://unpkg.com/htmx.org@1.9.10"
-      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-      crossorigin="anonymous"
-    </script></head>
- <body>
+      src = "https://unpkg.com/htmx.org@1.9.10";
+      integrity =
+        "sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC";
+      crossorigin = "anonymous";
+    </script>
+  </head>
+  <body>
     <h1>Dogs</h1>
     <h2>Spitz</h2>
-    <img width="400" src="img/Spitz.jpg" alt="Spitz">
+    <img width="400" src="img/Spitz.jpg" alt="Spitz" />
     <h2>Chihuahua</h2>
-    <img width="400" src="img/Chihuahua.jpg" alt="Chihuahua">
+    <img width="400" src="img/Chihuahua.jpg" alt="Chihuahua" />
   </body>
 </html>
